--- a/code/Base/EFTRLib/Podfile
+++ b/code/Base/EFTRLib/Podfile
@@ -3,8 +3,8 @@ use_frameworks!
 
 target 'EFTRLib' do
 pod 'CocoaAsyncSocket', '~> 7.4.3'
-pod 'Masonry', '~> 1.0.0'#autolayout 工具库 0.6.2
-pod 'MJRefresh', '~> 3.1.0'#下拉刷新2.4.9
+pod 'Masonry', '~> 1.0.1'#autolayout 工具库 0.6.2
+pod 'MJRefresh', '~> 3.1.10'#下拉刷新2.4.9
 pod 'UITableView+FDTemplateLayoutCell', '~> 1.4'#计算cell高度
 pod 'JHChainableAnimations', '~> 1.3.0'#便捷动画库
 #pod 'AFNetworking', '~> 2.6.3'##EFWK
@@ -24,8 +24,8 @@ pod 'GPUImage', '~> 0.1.7'#图片滤镜、效果库
 #pod 'CardIO', '~> 5.3.1'#银行卡扫描
 #pod 'TTTAttributedLabel', '~> 1.13.4'
 
-pod 'Realm', '~> 0.102.0'#非关系型数据库
-pod 'SDAutoLayout', '~> 1.53'
+pod 'Realm', '<= 0.102.0'#非关系型数据库
+pod 'SDAutoLayout', '~> 2.1.3'
 pod 'SDWebImage', '~> 3.7.6'
 
 pod 'SDCycleScrollView','~> 1.64' #第一图片轮播器
@@ -37,7 +37,7 @@ pod 'iOS-MagnifyingGlass', '~> 0.0.2'#放大鏡
 # TTMAnimatedTransitionGallery
 
 
-pod 'Permission', '~> 1.4.1'    #权限获取
+pod 'Permission', '~> 1.4.2'    #权限获取
 #/*Bluetooth
 #Camera
 #Contacts
